--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+
+.buttons (@bg-color, @txt-color, @font-size, @width) {
+    background-color: @bg-color;
+    color: @txt-color;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: @font-size;
+    margin: 4px 2px;
+    width: @width;
+    border-radius: 15px;
+}
