--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 800px;
+    margin: auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border-bottom: 2px dashed @navigation-border;
+
+    a {
+        font-size: 1.6rem;
+        font-weight: bold;
+        align-self: auto;
+        margin-left: 50px;
+    }
+}
+
+
+
+
