--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,15 @@
 .home {
 
+  .title {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px dashed @navigation-border; 
+
+    .funBus {
+      padding-bottom: 3%;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -25,7 +35,7 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+
 
     .text-content {
       padding-left: 1%;
@@ -56,6 +66,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    }
+
+    .btn {
+      .buttons(#008080, white, 16px, 80%);
     }
   }
 }// home
