--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,8 +16,12 @@ header {
         align-self: auto;
         margin-left: 50px;
     }
+
+    @media @mobile {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-left: 2%;
+        align-content: center;
+    }
 }
-
-
-
-
