--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,12 @@
     .funBus {
       padding-bottom: 3%;
     }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+    }
   }
 
   .content-section {
@@ -17,6 +23,11 @@
     justify-content: space-between;
 
    
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+    }
     
     .text-content {
       width: 48%;
@@ -36,7 +47,6 @@
   .inverse-content {
     padding-bottom: 30px;
 
-
     .text-content {
       padding-left: 1%;
       padding-right: 0;
@@ -45,6 +55,12 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+    }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;
+      align-content: center;
     }
   }
 
@@ -63,13 +79,30 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        display: flex;
+        flex-direction: column;
+        width: 65%;
+        margin: auto;
+      }
     }
 
     .btn {
       .buttons(#008080, white, 16px, 80%);
+
+      @media @mobile {
+        margin-bottom: 20px;
+      }
     }
   }
 }// home
