--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,14 +5,16 @@
     flex-direction: column;
     border-bottom: 2px dashed @navigation-border; 
 
-    .funBus {
-      padding-bottom: 3%;
-    }
-
     @media @mobile {
       display: flex;
       flex-direction: column;
       align-content: center;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    .funBus {
+      padding-bottom: 3%;
     }
   }
 
