--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,18 +10,24 @@ header {
     padding-bottom: 2%;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-left: 15px;
+        align-content: center;
+    }
+
     a {
         font-size: 1.6rem;
         font-weight: bold;
         align-self: auto;
         margin-left: 50px;
+
+        @media @mobile {
+            margin-left: 25px;
+        }
     }
 
-    @media @mobile {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        margin-left: 2%;
-        align-content: center;
-    }
+
 }
