--- a/less/home-page.less
+++ b/less/home-page.less
@@ -29,16 +29,31 @@
       display: flex;
       flex-direction: column;
       align-content: center;
+      width: 100%;
+      margin: auto;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-left: 10px;
     }
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+      width: 100%;
+      }
     }
+
+
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+        }
 
       img {
         border-radius: 10px;
